--- a/src/components/Containers/CardContainer/CardContainer.sass
+++ b/src/components/Containers/CardContainer/CardContainer.sass
@@ -9,8 +9,8 @@
      position: relative
      z-index: 101
      border-radius: 5px
-     gap: 1rem
-     padding: 0 0.9rem
+     gap: 0.7rem
+     padding: 1rem
 
      @media (min-width : 1024px) 
        width : 30rem
